My actual resume

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 <h1>Your Name</h1>
                 <p class="contact">
                     Email:
-                    <a href="mailto:yourname@example.com"
-                        >yourname@example.com</a
+                    <a href="mailto:iibqntz@gmail.com"
+                        >iibqntz@gmail</a
                     >
                     | Phone: (123) 456-7890 | LinkedIn:
                     <a href="#">linkedin.com/in/yourname</a>
@@ -91,68 +91,58 @@
             <section class="section">
                 <h2>Summary</h2>
                 <p>
-                    A brief summary about yourself, your skills, and what you
-                    bring to the table. Keep it concise and impactful.
+                    Student and lifelong learner with demonstrated communication skills, work ethic, and ambition.
                 </p>
             </section>
             <section class="section">
                 <h2>Work Experience</h2>
                 <div class="item">
-                    <h3>Job Title - Company Name</h3>
-                    <p>Dates of Employment</p>
+                    <h3>Booneville Sentinel  — Assistant</h3>
+                    <p>June, 2024 - October, 2024</p>
                     <p>
-                        Brief description of your responsibilities and
-                        achievements in this role.
+                        Worked through WIOA summer work program. Answered customers’ inquiries/complaints with diligence over the phone and in-person; made calls to officials to verify information before publication; delivered deposits; took notes during monthly school board, city council, and fiscal court meetings to write reports for publication in the local newspaper.
                     </p>
                 </div>
                 <div class="item">
-                    <h3>Job Title - Company Name</h3>
-                    <p>Dates of Employment</p>
+                    <h3>Owsley County Public Library — Assistant</h3>
+                    <p>June, 2023 - September, 2023</p>
                     <p>
-                        Brief description of your responsibilities and
-                        achievements in this role.
+                        Worked through WIOA summer work program. Tasks included cleaning the library, stacking and organizing books, and using my computer skills to find Dewey Decimal numbers for new books; supervised groups of children during summer events.
                     </p>
                 </div>
             </section>
             <div class="section">
                 <h2>Education</h2>
                 <div class="item">
-                    <h3>Degree - School Name</h3>
-                    <p>Year of Graduation</p>
+                    <h3>Hazard Community and Technical College, Kentucky — Associate in Arts</h3>
+                    <p>August, 2023 - May, 2025</p>
                 </div>
                 <div class="item">
-                    <h3>Degree - School Name</h3>
-                    <p>Year of Graduation</p>
+                    <h3>Owsley County High School, Kentucky— Diploma</h3>
+                    <p>August 2019 - May 2023</p>
                 </div>
             </section>
             <section class="section">
                 <h2>Skills</h2>
                 <div class="skills">
                     <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>Python</li>
-                        <li>Team Leadership</li>
+                        <li>Written/verbal communication</li>
+                        <li>Work ethic</li>
+                        <li>Organization</li>
+                        <li>Forward thinking</li>
+                        <li>Continuous learner</li>
                     </ul>
                 </div>
             </section>
             <section class="section">
                 <h2>Projects</h2>
                 <div class="item">
-                    <h3>Project Name</h3>
+                    <h3>CodeYou</h3>
                     <p>
-                        Brief description of the project, the technologies used,
-                        and your role in the project.
+                        Currently a member of the Code:You May 2025 cohort, intending to follow the web development pathway to learn Javascript, HTML, and CSS.
                     </p>
                 </div>
-                <div class="item">
-                    <h3>Project Name</h3>
-                    <p>
-                        Brief description of the project, the technologies used,
-                        and your role in the project.
-                    </p>
-                </div>
+ 
             </section>
         </main>
     </body>
